# Sorting-Robot

./: CMakeLists.txt  README.md  RobotManager.cpp  RoboterScaled.MOV  bash.sh  main.cpp
ADC/examples/: c  differential_rpi.c  singleended_rpi.c
Logs/: Logger.cpp  Logger.h
Sensors/: IR_Sensor.cpp
camera2/: Cmd.txt  camera.cpp
motor/: Motor.cpp  MotorManager.cpp  Piston.cpp
